...
                        fontWeight = FontWeight.Bold,
                        color = Color.White
                    )
                    Text(
                        modifier = Modifier
                            .padding(10.dp)
                            .testTag("tip_amount"),
                        text = currencyFormatter.format(tip),
                        fontSize = 20.sp,
                        fontWeight = FontWeight.Bold,
                        color = colorResource(R.color.secondary_text_color_light)
                    )
                }
...
                        fontWeight = FontWeight.Bold,
                        color = Color.White
                    )
                    Text(
                        modifier = Modifier
                            .padding(10.dp)
                            .testTag("bill_amount"),
                        text = currencyFormatter.format(bill),
                        fontSize = 20.sp,
                        fontWeight = FontWeight.Bold,
                        color = colorResource(R.color.secondary_text_color_dark)
                    )
                }
...
                        fontWeight = FontWeight.Bold,
                        color = Color.White
                    )
                    Text(
                        modifier = Modifier
                            .padding(10.dp)
                            .testTag("total_amount"),
                        text = currencyFormatter.format(total),
                        fontSize = 20.sp,
                        fontWeight = FontWeight.Bold,
                        color = colorResource(R.color.primary_text_color_light)
                    )
                }
...
            fontSize = 20.sp
        )
        Switch(
            modifier = modifier
                .fillMaxWidth()
                .wrapContentWidth(Alignment.End)
                .testTag("round_switch"),
            checked = roundUp,
            onCheckedChange = onRoundUpChanged,
            colors = SwitchDefaults.colors(
                checkedThumbColor = Color.White,
                checkedTrackColor = colorResource(R.color.primary_text_color_light),
                uncheckedThumbColor = Color.Gray,
...
                ),
                value = tipInput,
                onValueChanged = onTipChange,
                modifier = Modifier
                    .padding(bottom = 28.dp)
                    .fillMaxWidth()
                    .testTag("tip_input")
            )
        }
    }
}

@Composable
...
            }
            Box(
                modifier = Modifier
                    .weight(1f)
                    .fillMaxHeight()
                    .clickable { onIncrease() }
                    .testTag("person_plus")
                    .padding(end = 12.dp),
                contentAlignment = Alignment.Center
            ) {
                Text(
                    text = stringResource(R.string.plus),
                    fontSize = 28.sp,
...
