<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="tip_calculator">Tip Calculator</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="tip_amount">Tip</string>
    <string name="how_was_the_service">Tip Percentage</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="total_amount">Total</string>

    <string name="select_tip">Select Tip</string>
    <string name="ten">10</string>
    <string name="fifteen">15</string>
    <string name="twenty">20</string>
    <string name="twenty_five">25</string>
    <string name="spilt_person">Spilt/Person</string>
    <string name="bill">Bill</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="enter_amount">Enter Amount</string>

</resources>